--- a/style.css
+++ b/style.css
@@ -29,12 +29,14 @@ html, body {
   display: flex;
   justify-content: space-around;
   padding-bottom: 40px;
+  text-decoration: none;
 }
 .header-main-text {
   font-family: 'Forum', cursive;
   padding-top: 40px;
   font-size: 40px;
-  color: #4E4E4E
+  color: #4E4E4E;
+  text-decoration: none;
 }
 
 
@@ -50,6 +52,8 @@ padding-left: 30px;
 
 
 .hvr-float {
+  color: #4E4E4E;
+  text-decoration: none;
   display: inline-block;
   vertical-align: middle;
   transform: translateZ(0);
@@ -65,6 +69,7 @@ padding-left: 30px;
 .hvr-float:focus,
 .hvr-float:active {
   transform: translateY(-8px);
+  color: #4E4E4E;
 }
 
 .nav-main-text {
@@ -79,7 +84,7 @@ padding-left: 30px;
 
 }
 .header-main-img {
-  width: 900px;
+  width: 80vh;
   padding-left: 150px;
 }
 .body-main-text {
