--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ color: #4E4E4E;
 padding-left: 30px;
 }
 
+.spacing-home-container {
+  padding-left: 100px;
+  padding-right: 100px;
+}
 /* Mobile Display  */
 @media screen and (max-width: 800px) {
   .header-main {
@@ -84,6 +88,10 @@ padding-left: 30px;
   .design-button {
     margin-right: 35px;
     margin-top: 20px;
+  }
+  .spacing-home-container {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -181,4 +189,8 @@ padding-left: 30px;
 
 ul.a {
   list-style-image: url(./assets/icon-ul.png);
+}
+
+.accent-style {
+  color: #6F5060;
 }
