--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chivo&family=Forum&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Unbounded&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,600;1,600&family=Press+Start+2P&display=swap');
 
 @keyframes bounce {
   0%, 20%, 60%, 100% {
@@ -25,7 +26,7 @@
 }
 
 html, body {
-  margin: 0;
+  padding: 0;
   background-color: #E7E6E6;
   /* cursor: url("./assets/cursor.png"), auto; */
 }
@@ -183,6 +184,7 @@ padding-left: 30px;
 .page-buttons {
   text-align: center;
   padding-top: 50px;
+  padding-bottom: 30px;
 }
 
 .code-button {
@@ -292,4 +294,69 @@ h5.a {
 .code-container {
   margin-left: 60px;
   margin-right: 60px;
+}
+
+.modal-style {
+  width: 100%;
+  max-width: max-content;
+}
+#bolder-text {
+  font-weight: 600;
+  font-style: italic;
+}
+
+#modal-img,
+#modal-img2 {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s; 
+}
+
+#modal-img:hover,
+#modal-img2:hover
+{opacity: 0.7;}
+
+
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 100px; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.9); 
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 900px;
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 90%;
+  }
 }
